# sheaf_long_range_interaction

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY.md  current_state_deck.tex  experimental_setup.tex  pyproject.toml
configs/: analysis.yaml  analysis_cities_runpod.yaml  analysis_runpod.yaml  barbell.yaml  cities.yaml  transfer.yaml  transfer_legacy.yaml
patches/: runpod_runtime_hotfix.patch  sheaf_mpnn_cuda_stability.patch
scripts/: bootstrap_runpod_worker.sh  curvature_sidecar.py  deploy_runpod.py  run_all_gpu.sh  run_analysis_gpu.sh  run_barbell_gpu.sh  run_cities_gpu.sh  run_runpod_worker.sh  run_transfer_gpu.sh  setup_curvature_env.sh
src/slri/: __init__.py  cli.py  config.py  grid.py  models.py  storage.py  training.py
src/slri/analysis/: __init__.py  adapters.py  curvature.py  geometry.py  influence.py  pathwise.py  plotting.py  runner.py
src/slri/datasets/: __init__.py  barbell.py  base.py  cities.py  graph_utils.py  loader.py  transfer.py
tests/: test_analysis.py  test_barbell.py  test_cities.py  test_data_cache.py  test_deployment.py  test_grid.py  test_launchers.py  test_models.py  test_storage.py  test_training.py  test_transfer.py
