[project]
name = "sheaf-long-range-interaction"
version = "0.1.0"
description = "Reproducible NSD experiments for long-range graph interaction tasks"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "lightning==2.6.0",
    "matplotlib>=3.9",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=17.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.14",
    "sheaf-mpnn",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.17"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.11"]

[project.scripts]
slri = "slri.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slri"]

[tool.uv.sources]
sheaf-mpnn = { path = "external/sheaf-mpnn", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src", "external/sheaf-mpnn/src"]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore:Failing to pass a value to the 'type_params'.*:DeprecationWarning:torch_geometric.inspector",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
